--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -394,7 +394,7 @@ h2 {
   font-size: var(--h2-size);
   font-weight: var(--h2-weight);
   line-height: 1.2;
-  font-family: var(--primary-font);
+  /* font-family: var(--primary-font); */
   color: var(--primary-t-color);
   -ms-word-wrap: break-word;
   word-wrap: break-word;
