--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,31 +1,32 @@
 @media only screen and (max-width: 800px) {
-    .logo {
-      display: none;
-    }
+  .logo {
+    display: none;
+  }
 }
 
-.menu_left{
-  transition: transform .3s ease-out!important;
+.menu_left {
+  transition: transform 0.3s ease-out !important;
   /* //transform: translate3d(0%, 0px, 0px)!important; */
-  height: 100%!important;
-  width: 292px!important;
+  height: 100% !important;
+  width: 292px !important;
   /* position: absolute!important;
   top: 0!important;
   left: 0px!important; */
 }
 
-.menu_closed{
-  transform: translate3d(0px, 0px, 0px)!important;
-
+.menu_closed {
+  transform: translate3d(0px, 0px, 0px) !important;
 }
-.list_item__{
-  color: black!important;
-    display: inline-block!important;
-    font-size: 20px!important;
-    padding-top: 82px!important;
+.list_item__ {
+  color: black !important;
+  display: inline-block !important;
+  font-size: 20px !important;
+  padding-top: 82px !important;
 }
 
-.list_child{
-  display: flex!important;
-    justify-content: space-between!important;
+.list_child {
+  justify-content: space-between !important;
+  cursor: pointer;
+  margin-bottom: 15px;
+  text-align: center;
 }
