--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3520,6 +3520,7 @@ img.networks {
 }
 .referrer-table tr td {
   color: black;
+  padding: 5px;
 }
 
 /* Sunil code start */
@@ -3637,4 +3638,30 @@ table {
 
 .fix_logo {
   height: 30px !important;
+}
+
+.myoverflow {
+  overflow: scroll;
+  overflow-x: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
