--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3677,3 +3677,15 @@ table {
   width: 100%;
   max-width: 150px;
 }
+
+nav img.flag {
+  max-width: 50px !important;
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 800px) {
+  nav img.flag {
+    max-width: 30px !important;
+    border-radius: 3px;
+  }
+}
